--- a/figs/deadweight.tex
+++ b/figs/deadweight.tex
@@ -1,4 +1,4 @@
-\begin{figure*}[t]
+\begin{figure*}
     \vspace{-0.7cm}
       \centering
       \includegraphics[width=0.5\textwidth]{figs/deadweight.jpg}
