--- a/figs/schedule.tex
+++ b/figs/schedule.tex
@@ -1,7 +1,7 @@
 \begin{figure*}[t]
     \vspace{-0.7cm}
       \centering
-      \includegraphics[width=0.9\textwidth]{figs/schedule.png}
+      \includegraphics[width=\textwidth]{figs/schedule.png}
       \vspace{-0.2cm}
       \caption[Repositioning Schedule]{Schedule for reposition.}
       \label{fig:schedule}
