--- a/figs/ascending_descending.tex
+++ b/figs/ascending_descending.tex
@@ -1,4 +1,4 @@
-\begin{figure*}
+\begin{figure}[b]
     \vspace{-0.7cm}
       \centering
       \includegraphics[width=0.5\textwidth]{figs/ascending_descending.png}
@@ -6,4 +6,4 @@
       \caption[Resistance - Pressure]{Resistance vs Pressure for Velostat}
       \label{fig:velostat}
 \vspace{1.0cm}
-\end{figure*}
+\end{figure}
