--- a/figs/mat_frames.tex
+++ b/figs/mat_frames.tex
@@ -1,9 +1,9 @@
-\begin{figure*}[t]
+\begin{figure*}
     \vspace{-0.7cm}
       \centering
       \includegraphics[width=\textwidth]{figs/mat_frames.png}
       \vspace{-0.2cm}
       \caption[Mat frames]{Pressure mat frames}
-      \label{fig:functional}
+      \label{fig:mat_frames}
 \vspace{1.0cm}
 \end{figure*}
