--- a/figs/velostat_layers.tex
+++ b/figs/velostat_layers.tex
@@ -1,4 +1,4 @@
-\begin{figure}[h]
+\begin{figure}
     \centering
     \begin{subfigure}[b]{0.4\textwidth}
         \includegraphics[width=\textwidth]{figs/one_layer.png}
