--- a/figs/simulation.tex
+++ b/figs/simulation.tex
@@ -1,4 +1,4 @@
-\begin{figure*}[t]
+\begin{figure*}
     \vspace{-0.7cm}
       \centering
       \includegraphics[width=\textwidth]{figs/simulation.png}
