Add image references

--- a/thesis.bib
+++ b/thesis.bib
@@ -303,5 +303,17 @@ doi = {10.1109/ICICI-BME.2017.8537720}
 
 @article{sostoolkit,
   title={TOOLKIT FOR PRESSURE ULCER PREVENTION AND TREATMENT},
+  year={2009},
   author={HOMA’SSKIN, SAVEOKLA}
+}
+
+@article{saxena,
+  title={Analysis of crosstalk in networked arrays of resistive sensors},
+  author={Saxena, Raghvendra Sahai and Saini, Navneet Kaur and Bhan, RK},
+  journal={IEEE Sensors Journal},
+  volume={11},
+  number={4},
+  pages={920--924},
+  year={2010},
+  publisher={IEEE}
 }
