--- a/figs/ascending_descending.tex
+++ b/figs/ascending_descending.tex
@@ -3,7 +3,7 @@
       \centering
       \includegraphics[width=0.5\textwidth]{figs/ascending_descending.png}
       \vspace{-0.2cm}
-      \caption[Resistance - Pressure]{Resistance vs Pressure for Velostat}
+      \caption[Resistance vs Pressure Relationship]{Resistance vs Pressure Relationship for Velostat}
       \label{fig:velostat}
 \vspace{1.0cm}
 \end{figure}
