--- a/figs/deadweight.tex
+++ b/figs/deadweight.tex
@@ -3,7 +3,7 @@
       \centering
       \includegraphics[width=0.5\textwidth]{figs/deadweight.jpg}
       \vspace{-0.2cm}
-      \caption[deadweight]{Measuring with deadweight}
+      \caption[Measuring with Deadweight]{Measuring with deadweight}
       \label{fig:deadweight}
 \vspace{1.0cm}
 \end{figure*}
