--- a/figs/mat_frames.tex
+++ b/figs/mat_frames.tex
@@ -3,7 +3,7 @@
       \centering
       \includegraphics[width=\textwidth]{figs/mat_frames.png}
       \vspace{-0.2cm}
-      \caption[Mat frames]{Pressure mat frames}
+      \caption[Pressure Images from Pressure Measuring Mat]{Pressure Images from Pressure Measuring Mat}
       \label{fig:mat_frames}
 \vspace{1.0cm}
 \end{figure*}
