--- a/figs/ml_result.tex
+++ b/figs/ml_result.tex
@@ -3,7 +3,7 @@
       \centering
       \includegraphics[width=\textwidth]{figs/ml_result.png}
       \vspace{-0.2cm}
-      \caption[mlresult]{Neural Network result}
+      \caption[Results from Neural Network Models]{Results from Neural Network Models}
       \label{fig:mlresult}
 \vspace{1.0cm}
 \end{figure*}
