--- a/figs/posturemodel.tex
+++ b/figs/posturemodel.tex
@@ -3,7 +3,7 @@
       \centering
       \includegraphics[width=0.3\textwidth]{figs/posturemodel.png}
       \vspace{-0.2cm}
-      \caption[Posture Model]{Neural Network architecture of the posture detection model. When pressure image is given the model identifies the sleeping posture}
+      \caption[Posture Detection Model]{Neural Network architecture of the posture detection model. When pressure image is given the model identifies the sleeping posture}
       \label{fig:posturemodel}
 \vspace{1.0cm}
 \end{figure*}
