--- a/figs/pressure-sore-stages.tex
+++ b/figs/pressure-sore-stages.tex
@@ -3,7 +3,7 @@
       \centering
       \includegraphics[width=0.5\textwidth]{figs/pressure-sore-stages.jpg}
       \vspace{-0.2cm}
-      \caption[Stages of a pressure ulcer]{Stages I-IV of pressure ulcers according to NPUAP classifications. Image credits: https://www.nursinghomelawcenter.org/bed-sore-pictures.html}
+      \caption[Stages of A Pressure Ulcer]{Stages I-IV of pressure ulcers according to NPUAP classifications. Image credits: https://www.nursinghomelawcenter.org/bed-sore-pictures.html}
       \label{fig:pustages}
 \vspace{1.0cm}
 \end{figure*}
