--- a/figs/pressure_mat.tex
+++ b/figs/pressure_mat.tex
@@ -3,7 +3,7 @@
       \centering
       \includegraphics[width=0.5\textwidth]{figs/pressure_mat.png}
       \vspace{-0.2cm}
-      \caption[pressuremat]{Pressure mat}
+      \caption[Pressure Measuring Mat]{Pressure measuring mat}
       \label{fig:pressuremat}
 \vspace{1.0cm}
 \end{figure*}
