--- a/figs/schematic1.tex
+++ b/figs/schematic1.tex
@@ -2,7 +2,7 @@
       \vspace{-0.3cm}
       \centering
       \includegraphics[width=0.8\textheight, angle=90]{figs/schematic1.pdf}
-      \caption[Schematic]{Schematic Diagram.}
+      \caption[Schematic Diagram]{Schematic diagram of the pressure measuring mat.}
       \label{fig:schematic}
       \vspace{-1cm}
 \end{figure*}
