--- a/figs/simulation.tex
+++ b/figs/simulation.tex
@@ -3,7 +3,7 @@
       \centering
       \includegraphics[width=\textwidth]{figs/simulation.png}
       \vspace{-0.2cm}
-      \caption[Simulation]{Simulation.}
+      \caption[Simulation - Pressure Distribution]{Simulation of pressure redistribution}
       \label{fig:simulation}
 \vspace{1.0cm}
 \end{figure*}
