--- a/figs/utm.tex
+++ b/figs/utm.tex
@@ -3,7 +3,7 @@
       \centering
       \includegraphics[width=0.5\textwidth]{figs/utm.jpg}
       \vspace{-0.2cm}
-      \caption[UTM]{Universal testing machine}
+      \caption[Universal Testing Machine]{Universal testing machine}
       \label{fig:utm}
 \vspace{1.0cm}
 \end{figure*}
