--- a/figs/velostat_layers.tex
+++ b/figs/velostat_layers.tex
@@ -15,5 +15,5 @@
     \hfill %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. 
     %(or a blank line to force the subfigure onto a new line)
     \vspace{0.2cm}
-    \caption{Time for stable resistance value was higher in the case of two layers than one layer}\label{fig:hysterisis}
+    \caption[Compare No. of Layers]{Time for stable resistance value was higher in the case of two layers than one layer}\label{fig:hysterisis}
 \end{figure}
