--- a/figs/mobileapp.tex
+++ b/figs/mobileapp.tex
@@ -50,5 +50,5 @@
     \hfill %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. 
     %(or a blank line to force the subfigure onto a new line)
     \vspace{0.2cm}
-    \caption{User interface of mobile app.}\label{fig:hysterisis}
+    \caption[{User Interface of Mobile App.}]{User interface of mobile app.}\label{fig:hysterisis}
 \end{figure}
