--- a/figs/ulceration_points.tex
+++ b/figs/ulceration_points.tex
@@ -3,7 +3,7 @@
       \centering
       \includegraphics[width=0.5\textwidth]{figs/ulceration-points.jpg}
       \vspace{-0.2cm}
-      \caption[Ulceration points]{Common sites where ulceration occurs.}
+      \caption[Ulceration Points]{Common sites where ulceration occurs.}
       \label{fig:ulcerpoints}
 \vspace{1.0cm}
 \end{figure*}
